# APC

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Pipfile  README.md  appveyor.yml  make.ps1  requirements.txt
.github/workflows/: codeql.yml  publish-api-prod.yaml  publish-api.yaml  publish-frontend-prod.yaml  publish-frontend.yaml  publish-microservices.yaml
_v1/: README.md
_v1/assets/: apim_google.template.xml  gcc_settings.md  tester.service
_v1/frontend/: package-lock.json
_v1/functions/: requirements.txt
_v1/functions_test/: testers_test.py
_v1/tester/: requirements.txt
assets/: Db_dump.ipynb  apim_google.template.xml  gcc_settings.md  requests.http  requests.txt
assets/database/: db_init.sql
assets/ssh/: README.md  setupns.sh
cppseminar/: .dockerignore  cppseminar.sln  docker-compose.yml
cppseminar/apchelm/: Chart.yaml  README.md  values-prod.yaml  values.yaml
cppseminar/cosmosdb-emul/: .dockerignore  Dockerfile  cosmosdb-emulator.pfx  emulator.pem
cppseminar/envoy/: envoy.yaml
cppseminar/k8s/: apc-ingress.yaml  apc-secrets.yaml  presentation-deployment.yaml  submission-deployment.yaml  userservice-deployment.yaml
cppseminar/mongo/: .gitignore  admins.txt  init-mongo.js
cppseminar/monitoringservice/: Dockerfile  Program.cs  Startup.cs  monitoringservice.csproj  monitoringservice.sln
cppseminar/mqreadservice/: Dockerfile  Program.cs  appsettings.json  mqreadservice.csproj  mqreadservice.sln
cppseminar/presentation/: Dockerfile  Program.cs  Startup.cs  appsettings.json  config.json  presentation.csproj  presentation.sln
cppseminar/submissions/: .dockerignore  Dockerfile  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.json  submissions.csproj
cppseminar/testservice/: .dockerignore  .gitignore  Dockerfile  Program.cs  Startup.cs  appsettings.json  testservice.csproj
cppseminar/userservice/: Dockerfile  Program.cs  Startup.cs  appsettings.json  userservice.csproj  userservice.sln
cppseminar/vm-test-queue/: .dockerignore  Dockerfile  Pipfile  main.py
cppseminar/vm-test-server/: .dockerignore  Dockerfile  Pipfile  main.py
cppseminar/worker/: activities.go  common.go  go.sum  workflow.go
deploy/: README.md  cleanup-azure-roles.ps1  client.yml  deploy-portal.ps1  harden-portal.ps1  hosts-sample  hosts-sample.ini  logger.yaml  logger.yml  server.yml  wg.yml
deploy/bicep/: bicep.sh  del.sh  logger.bicep  logger.sh  main.bicep
deploy/group_vars/: all.yml  dev_ap.yml  devnetap.yml  logger.yaml
deploy/helm/: README.md  values.yaml
docs/: cosmos-db-emulator.md
frontend/: .env.sample  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.test.js  index.js
functions/: requirements.txt
functions/cases/: __init__.py  function.json
functions/download_submissions/: function.json
functions/dump/: __init__.py
functions/keep-alive/: __init__.py  function.json
functions/messsage/: __init__.py  function.json
functions/orchestrator-push/: __init__.py  function.json
functions/queue_push/: __init__.py  function.json
functions/shared/: common.py  core.py  decorators.py  http.py  models.py  mongo.py  testers.py  users.py
functions/start-vm/: __init__.py
functions/start-vm-orchestrator/: __init__.py
functions/stop-vm/: __init__.py
functions_test/: core_test.py  http_test.py  test_endpoint_test.py  testers_test.py  user_test.py
msbuild/: run.bat
services/: docker-compose.yml  go.mod  go.sum
src/: .gitignore  compiler.py  compiler_test.py  constants.py  evaluators.py  evaluators_test.py  infrastructure.py  infrastructure_test.py  library.py  library_test.py  main.py  runner.py  runner_test.py  search_substring.py  settings.py
test-data/: .gitignore  search_substring.json  sudoku.json
tester/: .dockerignore  Dockerfile  README.md  create-docker.ps1  fold2lf.py  make.ps1  tests.py
tester/cpp-support/: .gitattributes  CMakeLists.txt  catch.hpp  launch.cpp  support-wrap.hpp  support.c  support.h
tester/submission-cmake/: CMakeLists.txt
vm-test/: Dockerfile  Pipfile  app.py
(+449 files in other folders)
